[gd_scene load_steps=11 format=3 uid="uid://b0iwg8fpjs6ek"]

[ext_resource type="Script" uid="uid://dvfuo03vxx8ia" path="res://Scripts/boca.gd" id="1_3mgpy"]
[ext_resource type="Texture2D" uid="uid://c2e3nvknbhs6x" path="res://assets/Sprite-0001.png" id="2_cjq5v"]
[ext_resource type="Texture2D" uid="uid://cf3a6anr7x3jb" path="res://icon.svg" id="3_8rnyk"]
[ext_resource type="Texture2D" uid="uid://bh4u16dqa25hb" path="res://assets/prota/bicho_boca.png" id="4_68pld"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n0b81"]
atlas = ExtResource("4_68pld")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3ulp"]
atlas = ExtResource("4_68pld")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jb3kq"]
atlas = ExtResource("4_68pld")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cj1xg"]
atlas = ExtResource("4_68pld")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ej8j"]
atlas = ExtResource("4_68pld")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_oo404"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0b81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0b81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3ulp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0b81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3ulp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0b81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0b81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3ulp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0b81")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jb3kq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cj1xg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ej8j")
}],
"loop": false,
"name": &"disparo",
"speed": 24.0
}]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_3mgpy")

[node name="Line2D" type="Line2D" parent="."]
texture = ExtResource("2_cjq5v")
texture_mode = 1
joint_mode = 1

[node name="gancho" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_8rnyk")

[node name="piboteB" type="Node2D" parent="."]
position = Vector2(5.96046e-08, -4.54747e-13)
rotation = -1.5708

[node name="boca" type="AnimatedSprite2D" parent="piboteB"]
position = Vector2(-4.76837e-07, 0)
rotation = 1.5708
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_oo404")
animation = &"disparo"
autoplay = "default"
offset = Vector2(0, -8.75)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
visible = false
position = Vector2(42, 49)
polygon = PackedVector2Array(-694, -48, -695, -1479, 608, -1479, 608, -50)

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
